<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settings_page_content_padding"
                android:text="@string/about"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvVisitChannel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/settings_page_content_padding"
                android:text="@string/visit_youtube_channel"
                android:textColor="@color/white" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/scStartupMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settings_page_content_padding"
                android:text="@string/settings_display_mode"
                android:textColor="@color/white" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_divider_height" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settings_page_content_padding"
                android:text="tap to listen, longtap to select/deselect"
                android:textColor="@color/white_80" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvSounds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_divider_height" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settings_page_content_padding"
                android:text="@string/created_by_byters_2016"
                android:textColor="@color/white_80" />

            <TextView
                android:id="@+id/tvByters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/settings_page_content_padding"
                android:text="@string/visit_website"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/settings_page_content_padding"
                android:text="@string/feedback"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>
</FrameLayout>